--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,56 @@ body {
 .monserrat-bold {
   font-weight: 800;
 }
+
+/*Html Styling*/
+
+.main-container {
+  display: grid;
+  grid-template-areas:
+    "navbar"
+    "search-section"
+    "content"
+    "footer";
+  grid-template-rows: 1fr 1fr 15fr 1fr;
+  min-height: 100vh;
+}
+
+nav {
+  background-color: antiquewhite;
+  grid-area: navbar;
+}
+
+.search-section {
+  background-color: aqua;
+  grid-area: search-section;
+}
+
+.content {
+  background-color: blueviolet;
+  grid-area: content;
+}
+
+footer {
+  background-color: brown;
+  grid-area: footer;
+}
+
+/* @Media Queries */
+
+@media (min-width: 576px) {
+  .main-container {
+    display: grid;
+    grid-template-areas:
+      "navbar search-section"
+      "navbar content"
+      "navbar footer";
+    grid-template-rows: 1fr 15fr 1fr;
+    grid-template-columns: minmax(180px, 1fr) 9fr;
+    min-height: 100vh;
+  }
+
+  nav {
+    background-color: antiquewhite;
+    grid-area: navbar;
+  }
+}
