--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 /*Font Setup*/
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #cbd5e1;
 }
 
 .monserrat-bold {
-  font-weight: 800;
+  font-weight: 600;
 }
 
 /*Html Styling*/
@@ -16,28 +17,117 @@ body {
     "search-section"
     "content"
     "footer";
-  grid-template-rows: 1fr 1fr 15fr 1fr;
+  grid-template-rows: 70px 70px 1fr 40px;
   min-height: 100vh;
 }
 
 nav {
-  background-color: antiquewhite;
   grid-area: navbar;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+nav h1 {
+  font-size: 2rem;
+  margin-left: 0.5rem;
 }
 
 .search-section {
-  background-color: aqua;
   grid-area: search-section;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1rem;
+}
+
+.search-section input {
+  height: 32px;
+  width: 60%;
+  max-width: 400px;
+  border-radius: 8px;
+  border: none;
+  padding-left: 10px;
+  font-size: 0.8rem;
+}
+
+.search-section input:focus {
+  outline: 2px solid #818cf8;
+  outline-offset: 1px;
 }
 
 .content {
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   grid-area: content;
+  background-color: #ffffff;
+  border-top-left-radius: 3rem;
+  border-top-right-radius: 3rem;
+}
+
+.car-grid {
+  /* outline: 1px solid black; */
+  margin: 2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+.card {
+  width: 93%;
+  outline: 2px solid #e0e7ff;
+  border-radius: 10px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card:hover {
+  outline: 4px solid #e0e7ff;
+}
+
+.product-title {
+  padding: 0;
+  margin: 0;
+}
+
+.product-image {
+  width: 100%;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.product-price-flexbox {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-price-flexbox p {
+  font-size: 0.9rem;
+  margin-bottom: 0.2rem;
+}
+
+.btn-buy {
+  background-color: #6366f1;
+  color: #ffffff;
+  height: 2.5rem;
+  width: 100%;
+  border: none;
+  border-radius: 8px;
+  margin-top: 1rem;
+}
+
+.btn-buy:hover {
+  outline: 2px solid #c7d2fe;
+  outline-offset: 2px;
 }
 
 footer {
-  background-color: brown;
+  /* background-color: brown; */
   grid-area: footer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* @Media Queries */
@@ -49,13 +139,33 @@ footer {
       "navbar search-section"
       "navbar content"
       "navbar footer";
-    grid-template-rows: 1fr 15fr 1fr;
+    grid-template-rows: 80px 1fr 50px;
     grid-template-columns: minmax(180px, 1fr) 9fr;
     min-height: 100vh;
   }
 
+  .content {
+    border-top-left-radius: 4rem;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 4rem;
+  }
+
   nav {
-    background-color: antiquewhite;
     grid-area: navbar;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .search-section {
+    padding-bottom: 0;
+  }
+
+  .car-grid {
+    /* outline: 1px solid black; */
+    margin: 2rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   }
 }
